[tool.poetry]
name = "requests-hator-proxy"
version = "0.1.0"
description = ""
authors = ["dgnsrekt <dgnsrekt@pm.me>"]
readme = "README.md"
homepage = "https://github.com/dgnsrekt/requests-hator-proxy"
repository = "https://github.com/dgnsrekt/requests-hator-proxy"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.3.1"
jinja2 = "^2.11.2"
loguru = "^0.5.2"
more_itertools = "^8.5.0"
pydantic = "^1.6.1"
python-decouple = "^3.3"
requests = {extras = ["socks"], version = "^2.24.0"}
enlighten = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
